--- a/CSS/overview.css
+++ b/CSS/overview.css
@@ -12,7 +12,6 @@ div.row_1{
     background-color: #ffffff;
     cursor: pointer;
 }
-
 .icon-menu {
     color: #568cf9;
 }
@@ -33,6 +32,8 @@ div.active_row {
 
 a.sidebar {
     background-color: #ffffff;
+    font-size: 14px;
+    
 }
 
 a.sidebar:hover {
